--- a/index.html
+++ b/index.html
@@ -64,10 +64,10 @@ Para resolver este problema se hace un filtrado de los datos mostrando aquellos 
 <li>Marzo: Las Palmas, Canarias, Santa Cruz de Tenerife, Alicante, Sevilla, Madrid, Barcelona, Valencia, Islas Baleares, Ceuta.</li><br>
 <li>Abril: Las Palmas, Canarias, Santa Cruz de Tenerife,, Sevilla, Alicante, Barcelona, Islas Baleares, Ceuta, Madrid, Valencia.</li><br>
 <li>Mayo: Las Palmas, Sevilla, Islas Baleares, Santa Cruz de Tenerife, Barcelona, Alicante, Ceuta, Málaga, Madrid.</li><br>
-<li>Junio: Islas Baleares, Las Palmas, Canarias, Alicante, Santa Cruz de Tenerife,, Barcelona, Málaga, Tarragona, Valencia, Ceuta.</li><br>
+<li>Junio: Islas Baleares, Las Palmas, Canarias, Alicante, Santa Cruz de Tenerife, Barcelona, Málaga, Tarragona, Valencia, Ceuta.</li><br>
 <li>Julio: Islas Baleares, Las Palmas, Canarias, Santa Cruz de Tenerife, Alicante, Ceuta, Tarragona, Guipuzcoa, Barcelona, Málaga.</li><br>
 <li>Agosto: Islas Baleares,Ceuta, Las Palmas, Canarias, Santa Cruz de Tenerife, Tarragona, Alicante, Guipuzcoa, Cádiz, Vizcaya.</li><br>
-<li>Septiembre: Islas Baleares, Las Palmas, Alicante, Canarias, Santa Cruz de Tenerife,, Barcelona, Valencia, Tarragona, Málaga, Guipuzcoa.</li><br>
+<li>Septiembre: Islas Baleares, Las Palmas, Alicante, Canarias, Santa Cruz de Tenerife, Barcelona, Valencia, Tarragona, Málaga, Guipuzcoa.</li><br>
 <li>Octubre: Las Palmas, Canarias, Santa Cruz de Tenerife,, ALicante, Sevilla, Barcelona, Madrid, Islas Baleares, Valencia, Vizcaya.</li><br>
 <li>Noviembre: Santa Cruz de Tenerife,, Canarias, Las Palmas, Ceuta, Madrid, Sevilla, Alicante, Barcelona, Valencia, Vizcaya.</li><br>
 <li>Diciembre: Santa Cruz de Tenerife, Canarias, Las Palmas, Ceuta, Madrid, Sevilla, Barcelona, Alicante, Granada, Vizcaya.</li><br>
@@ -86,21 +86,21 @@ Para resolver este problema se hace un filtrado de los datos mostrando aquellos 
 <img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/noviembre.png" alt="Diez primeros destinos. Mes: Noviembre" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Diciembre.png" alt="Diez primeros destinos. Mes: Diciembre" border="2"><br><br>
 
-<b>¿Niveles de ocupación en España?</b><br><br>
-<b>¿Ocupación hotelera?</b><br><br>
+<b>¿Índice de precios?</b><br><br>
+<b>¿Cómo varían los precios es España?</b><br><br>
 Los datos que se van a mostrar son los recogidos por el "Índice de precios hoteleros" es una medida estadística de la evolución del conjunto de precios aplicados por los empresarios a los distintos clientes que se alojan en los hoteles de España. Mide, por tanto, la evolución de los precios del sector desde la óptica de la oferta.
 Se recopilan datos del año 2018.<br>
 
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Enero%202018.png"  alt="Nivel % ocupación. Mes: Enero" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Febrero%202018.png"  alt="Nivel % ocupación. destinos Mes: Febrero" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Marzo%202018.png"  alt="Nivel % ocupación destinos. Mes: Marzo" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Abril%202018.png" alt="Nivel % ocupación. Mes: Abril" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Mayo%202018.png"  alt="Nivel % ocupación. Mes: Mayo" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Junio%202018.png"  alt="Nivel % ocupación. Mes: Junio" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Julio%202018.png"  alt="Nivel % ocupación. Mes: Julio" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Agosto%202018.png"  alt="Nivel % ocupación. Mes: Agosto" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Septiembre%202018.png"  alt="Nivel % ocupación. Mes: Septiembre" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Octubre%202018.png"  alt="Nivel % ocupación. Mes: Octubree" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Noviembre%202018.png"  alt="Nivel % ocupación. Mes: Noviembre" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/js-axue8c/master/Indice%20precio%20%25%20Diciembre%202018.png"  alt="DNivel % ocupación. Mes: Diciembre" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioEnero%202018.png"  alt="Nivel % ocupación. Mes: Enero" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioFebrero%202018.png"  alt="Nivel % ocupación. destinos Mes: Febrero" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioMarzo%202018.png"  alt="Nivel % ocupación destinos. Mes: Marzo" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioAbril%202018.png" alt="Nivel % ocupación. Mes: Abril" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioMayo%202018.png"  alt="Nivel % ocupación. Mes: Mayo" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioJunio%202018.png"  alt="Nivel % ocupación. Mes: Junio" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioJulio%202018.png"  alt="Nivel % ocupación. Mes: Julio" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioAgosto%202018.png"  alt="Nivel % ocupación. Mes: Agosto" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Septiembre" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioOctubre%202018.png"  alt="Nivel % ocupación. Mes: Octubree" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioNoviembre%202018.png"  alt="Nivel % ocupación. Mes: Noviembre" border="2"><br><br>
+<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioDiciembre%202018.png"  alt="DNivel % ocupación. Mes: Diciembre" border="2"><br><br>
 
