--- a/index.html
+++ b/index.html
@@ -91,16 +91,16 @@ Para resolver este problema se hace un filtrado de los datos mostrando aquellos 
 Los datos que se van a mostrar son los recogidos por el "Índice de precios hoteleros" es una medida estadística de la evolución del conjunto de precios aplicados por los empresarios a los distintos clientes que se alojan en los hoteles de España. Mide, por tanto, la evolución de los precios del sector desde la óptica de la oferta.
 Se recopilan datos del año 2018.<br>
 
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioEnero%202018.png"  alt="Nivel % ocupación. Mes: Enero" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioFebrero%202018.png"  alt="Nivel % ocupación. destinos Mes: Febrero" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioMarzo%202018.png"  alt="Nivel % ocupación destinos. Mes: Marzo" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioAbril%202018.png" alt="Nivel % ocupación. Mes: Abril" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioMayo%202018.png"  alt="Nivel % ocupación. Mes: Mayo" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioJunio%202018.png"  alt="Nivel % ocupación. Mes: Junio" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioJulio%202018.png"  alt="Nivel % ocupación. Mes: Julio" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioAgosto%202018.png"  alt="Nivel % ocupación. Mes: Agosto" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Septiembre" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioOctubre%202018.png"  alt="Nivel % ocupación. Mes: Octubree" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioNoviembre%202018.png"  alt="Nivel % ocupación. Mes: Noviembre" border="2"><br><br>
-<img src="https://github.com/Irache/turismo/blob/master/IndiceprecioDiciembre%202018.png"  alt="DNivel % ocupación. Mes: Diciembre" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Enero" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. destinos Mes: Febrero" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación destinos. Mes: Marzo" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png" alt="Nivel % ocupación. Mes: Abril" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Mayo" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Junio" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Julio" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Agosto" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Septiembre" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Octubree" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Noviembre" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="DNivel % ocupación. Mes: Diciembre" border="2"><br><br>
 
