--- a/index.html
+++ b/index.html
@@ -108,3 +108,10 @@ Conclusiones sobre los precios de los hoteles, la comunidad con un mayor índice
 No se cumple que para todas las comunidades con mayor indice de ocupación sean las mas caras, por ejemplo la comunidad Valenciana es la tercera más cara en enero sin embargo su ocupación no es la tercera mayor, para el mismo mes.<br><br>
 La comunidad con un menor número de ocupación es Castilla La Mancha.<br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/ocupaci%C3%B3n_comunidad.JPG"  alt="Linea temporal de ocupación por comunidad autónoma" border="2"><br><br>
+
+Visualizando la linea temporal para los precios:
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/indice_precios.JPG"  alt="Linea temporal de ocupación por comunidad autónoma" border="2"><br><br>
+
+Conclusiones: Aragón es la comunidad más barata. La más cara son las Islas Baleares.
+La tendencia de los precios también es acorde a los meses de mayor demanda.<br><br>
+
