--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  
  <h1>Seminario visualización</h1>
  Nombre: Irache Garamendi <br>
- Url: <a href ="https://js-axue8c.stackblitz.io"> Proyecto stackblitz: "https://js-axue8c.stackblitz.io</a><br>
+ Url: <a href ="https://stackblitz.com/edit/svelte-o6co1r?file=index.html"> Proyecto stackblitz: "https://stackblitz.com/edit/svelte-o6co1r?file=index.html"/a><br>
 
  <h1>Objetivo</h1>
 Realizar un estudio de parte del turismo en España durante el año 2018.<br><br>
