--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
  
  <h1>Seminario visualización</h1>
  Nombre: Irache Garamendi <br>
- Url: <a href ="https://stackblitz.com/edit/svelte-o6co1r?file=index.html"> Proyecto stackblitz: "https://stackblitz.com/edit/svelte-o6co1r?file=index.html"/a><br>
+ Url: <a href ="https://stackblitz.com/edit/svelte-o6co1r?file=index.html"> Proyecto stackblitz: "https://svelte-o6co1r.stackblitz.io/"</a><br> <br>
 
  <h1>Objetivo</h1>
 Realizar un estudio de parte del turismo en España durante el año 2018.<br><br>
@@ -70,7 +70,7 @@ Para resolver este problema se hace un filtrado de los datos mostrando aquellos 
 <li>Noviembre: Canarias, Ceuta, Madrid.</li><br>
 <li>Diciembre: Canarias, Ceuta, Madrid.</li><br>
 </ul>
-Visualmente:
+<b>Visualmente:</b> <br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/enero.png" alt="Diez primeros destinos. Mes: Enero" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/febrero.png" alt="Diez primeros. destinos Mes: Febrero" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/marzo.png" alt="Diez primeros destinos. Mes: Marzo" border="2"><br><br>
@@ -84,7 +84,7 @@ Visualmente:
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/noviembre.png" alt="Diez primeros destinos. Mes: Noviembre" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/diciembre.png" alt="Diez primeros destinos. Mes: Diciembre" border="2"><br><br>
 
-Como se puede ver el grado de ocupación mayor se da en las Islas. Entiendo esto como que hay un número más limitado de hoteles, y un mayor número de visitantes.
+Como se puede ver el grado de ocupación mayor se da en las Islas. Entiendo esto como que hay un número más limitado de hoteles, y un mayor número de visitantes.<br><br>
 
 <b>¿Índice de precios?</b><br><br>
 <b>¿Cómo varían los precios es España?</b><br><br>
@@ -98,20 +98,22 @@ Se recopilan datos del año 2018.<br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/IndiceprecioMayo%202018.png"  alt="Nivel % ocupación. Mes: Mayo" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/IndiceprecioJunio%202018.png"  alt="Nivel % ocupación. Mes: Junio" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/IndiceprecioJulio%202018.png"  alt="Nivel % ocupación. Mes: Julio" border="2"><br><br>
-<img src="https://raw.githubusercontent.com/Irache/turismo/master/IndiceprecioAgosto%202018.png"  alt="Nivel % ocupación. Mes: Agosto" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/Indic%20precioAgosto%202018.png"  alt="Nivel % ocupación. Mes: Agosto" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/IndicprecioSeptiembre%202018.png"  alt="Nivel % ocupación. Mes: Septiembre" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/IndiceprecioOctubre%202018.png"  alt="Nivel % ocupación. Mes: Octubree" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/IndiceprecioNoviembre%202018.png"  alt="Nivel % ocupación. Mes: Noviembre" border="2"><br><br>
 <img src="https://raw.githubusercontent.com/Irache/turismo/master/IndiceprecioDiciembre%202018.png"  alt="Nivel % ocupación. Mes: Diciembre" border="2"><br><br>
 
-Conclusiones sobre los precios de los hoteles, la comunidad con un mayor índice de precios es Las Islas Baleares. Los meses de mayor índice son los meses de mayo a septiembre, coincidiendo con los meses de mayor demeanda como se había visto en el primer gráfico.<br><br>
+<b>Conclusiones:</b> sobre los precios de los hoteles, la comunidad con un mayor índice de precios es Las Islas Baleares. Los meses de mayor índice son los meses de mayo a septiembre, coincidiendo con los meses de mayor demeanda como se había visto en el primer gráfico.<br><br>
 No se cumple que para todas las comunidades con mayor indice de ocupación sean las mas caras, por ejemplo la comunidad Valenciana es la tercera más cara en enero sin embargo su ocupación no es la tercera mayor, para el mismo mes.<br><br>
 La comunidad con un menor número de ocupación es Castilla La Mancha.<br><br>
-<img src="https://raw.githubusercontent.com/Irache/turismo/master/ocupaci%C3%B3n_comunidad.JPG"  alt="Linea temporal de ocupación por comunidad autónoma" border="2"><br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/ocupaci%C3%B3n_comunidad.JPG"  alt="Linea temporal de ocupación por comunidad autónoma" border="2" width="1000" height="1000"><br><br>
 
-Visualizando la linea temporal para los precios:
-<img src="https://raw.githubusercontent.com/Irache/turismo/master/indice_precios.JPG"  alt="Linea temporal de ocupación por comunidad autónoma" border="2"><br><br>
+Visualizando la linea temporal para los precios:<br><br>
+<img src="https://raw.githubusercontent.com/Irache/turismo/master/indice_precios.JPG"  alt="Linea temporal de ocupación por comunidad autónoma" border="2" width="1000" height="1000"><br><br>
 
-Conclusiones: Aragón es la comunidad más barata. La más cara son las Islas Baleares.
+<b>Conclusiones:</b> Aragón es la comunidad más barata. La más cara son las Islas Baleares. Viajar a Aragón en Julio sería la opción más barata y la opción menos saturada sería viajar a Asturias en Enero.<br><br>
 La tendencia de los precios también es acorde a los meses de mayor demanda.<br><br>
+
+
 
